# python_project_template

./: 404.html  CNAME  README.md  index.html  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: docs.yaml  pr-checks.yaml  tests.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/search/: search_index.json
