[metadata]
name = <your_lib_name>

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[options.extras_require]
dev =
    pre-commit
    pytest
    mypy
    beartype
    nbmake
    types-setuptools
    pytest-asyncio

[options]
python_requires = >=3.7, <4
packages =
    <your_package_name>

[mypy]
mypy_path = stubs
strict = true
plugins = pydantic.mypy

[mypy-transformers.*]
ignore_missing_imports = True
